--- a/CarletonDining/Base.lproj/Main.storyboard
+++ b/CarletonDining/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -146,7 +146,7 @@
                             <rect key="frame" x="0.0" y="132" width="600" height="20"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
-                            <color key="color" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </activityIndicatorView>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SimpleCell" id="NFk-hG-4ba">
@@ -198,6 +198,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Select a Meal" id="qZT-90-fZv">
                         <barButtonItem key="backBarButtonItem" title="back" id="OdG-Ye-60a"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="6qr-cc-HLG">
+                            <connections>
+                                <action selector="showPopover:" destination="9bg-ta-DV0" id="JHR-zh-8O4"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="spinner" destination="RXz-sr-qLC" id="7z5-9G-Vup"/>
@@ -213,6 +218,6 @@
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="UrB-kb-aMN"/>
+        <segue reference="QnN-4s-xls"/>
     </inferredMetricsTieBreakers>
 </document>
