--- a/CarletonDining/MenuItemCellTableViewCell.xib
+++ b/CarletonDining/MenuItemCellTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,14 +17,12 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mzm-gF-4oE">
                         <rect key="frame" x="8" y="10" width="156" height="79"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7nl-gE-6CZ">
                         <rect key="frame" x="313" y="40" width="20" height="20"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Or9-tc-Adm"/>
                             <constraint firstAttribute="width" constant="20" id="WHA-Qa-hXq"/>
@@ -32,7 +30,6 @@
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5zi-UG-0Nv">
                         <rect key="frame" x="276" y="40" width="20" height="20"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="VV5-3l-SHk"/>
                             <constraint firstAttribute="height" constant="20" id="iw3-Tp-Pvf"/>
@@ -40,7 +37,6 @@
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HmD-gP-2WK">
                         <rect key="frame" x="242" y="40" width="20" height="20"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="0b4-rc-cjc"/>
                             <constraint firstAttribute="height" constant="20" id="WB0-P6-E3m"/>
@@ -48,14 +44,12 @@
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CDg-hP-Ilr">
                         <rect key="frame" x="207" y="40" width="20" height="20"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="HwK-IR-vK7"/>
                             <constraint firstAttribute="width" constant="20" id="pyS-Pn-iMr"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="7nl-gE-6CZ" firstAttribute="leading" secondItem="5zi-UG-0Nv" secondAttribute="trailing" constant="15" id="0D6-tr-eRm"/>
                     <constraint firstItem="7nl-gE-6CZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="CX9-6g-CVO"/>
@@ -72,7 +66,6 @@
                     <constraint firstItem="CDg-hP-Ilr" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uYx-vm-KLp"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="Image0" destination="7nl-gE-6CZ" id="kSl-E2-Aza"/>
                 <outlet property="Image1" destination="5zi-UG-0Nv" id="dRp-Fz-BU0"/>
